weather random generator

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Loops/FibonacciSequence/.vs/FibonacciSequence/FileContentIndex
+/Loops/WeatherConsoleApp/.vs/WeatherConsoleApp/FileContentIndex
