--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /Loops/FibonacciSequence/.vs/FibonacciSequence/FileContentIndex
 /Loops/WeatherConsoleApp/.vs/WeatherConsoleApp/FileContentIndex
+/Loops/PrimeNumbersFinder/.vs/PrimeNumbersFinder/FileContentIndex
