--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Loops/FibonacciSequence/.vs/FibonacciSequence/FileContentIndex
 /Loops/WeatherConsoleApp/.vs/WeatherConsoleApp/FileContentIndex
 /Loops/PrimeNumbersFinder/.vs/PrimeNumbersFinder/FileContentIndex
+/Loops/MatrixMultiplication/.vs/MatrixMultiplication/FileContentIndex
