--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Loops/WeatherConsoleApp/.vs/WeatherConsoleApp/FileContentIndex
 /Loops/PrimeNumbersFinder/.vs/PrimeNumbersFinder/FileContentIndex
 /Loops/MatrixMultiplication/.vs/MatrixMultiplication/FileContentIndex
+/Loops/PascalsTriangle/.vs/PascalsTriangle/FileContentIndex
