--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Loops/PrimeNumbersFinder/.vs/PrimeNumbersFinder/FileContentIndex
 /Loops/MatrixMultiplication/.vs/MatrixMultiplication/FileContentIndex
 /Loops/PascalsTriangle/.vs/PascalsTriangle/FileContentIndex
+/Loops/SieveofEratosthenes/.vs/SieveofEratosthenes/FileContentIndex
