tic tac toe finished

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Loops/MatrixMultiplication/.vs/MatrixMultiplication/FileContentIndex
 /Loops/PascalsTriangle/.vs/PascalsTriangle/FileContentIndex
 /Loops/SieveofEratosthenes/.vs/SieveofEratosthenes/FileContentIndex
+/Loops/TicTacToe/.vs/TicTacToe/FileContentIndex
