--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Loops/PascalsTriangle/.vs/PascalsTriangle/FileContentIndex
 /Loops/SieveofEratosthenes/.vs/SieveofEratosthenes/FileContentIndex
 /Loops/TicTacToe/.vs/TicTacToe/FileContentIndex
+/Loops/QuizApp/.vs/QuizApp/FileContentIndex
