--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Loops/SieveofEratosthenes/.vs/SieveofEratosthenes/FileContentIndex
 /Loops/TicTacToe/.vs/TicTacToe/FileContentIndex
 /Loops/QuizApp/.vs/QuizApp/FileContentIndex
+/Loops/Permutations/.vs/Permutations/FileContentIndex
