Total Count of moves

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Loops/TicTacToe/.vs/TicTacToe/FileContentIndex
 /Loops/QuizApp/.vs/QuizApp/FileContentIndex
 /Loops/Permutations/.vs/Permutations/FileContentIndex
+/Loops/KnightsTour/.vs/KnightsTour/FileContentIndex
