--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Loops/QuizApp/.vs/QuizApp/FileContentIndex
 /Loops/Permutations/.vs/Permutations/FileContentIndex
 /Loops/KnightsTour/.vs/KnightsTour/FileContentIndex
+/OOP/LibraryManagementSystem/.vs/LibraryManagementSystem/FileContentIndex
