--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Loops/Permutations/.vs/Permutations/FileContentIndex
 /Loops/KnightsTour/.vs/KnightsTour/FileContentIndex
 /OOP/LibraryManagementSystem/.vs/LibraryManagementSystem/FileContentIndex
+/EventsAndDelegates/SortingTask/.vs/SortingTask/FileContentIndex/ec6f1b6f-60a8-4c8a-aac1-2c8f6e8407d8.vsidx
