event task implemented

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Loops/KnightsTour/.vs/KnightsTour/FileContentIndex
 /OOP/LibraryManagementSystem/.vs/LibraryManagementSystem/FileContentIndex
 /EventsAndDelegates/SortingTask/.vs/SortingTask/FileContentIndex/ec6f1b6f-60a8-4c8a-aac1-2c8f6e8407d8.vsidx
+/EventsAndDelegates/TemepratureSecurity/.vs/TemepratureSecurity/FileContentIndex
