WPF File created and connections established

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /EventsAndDelegates/TemepratureSecurity/.vs/TemepratureSecurity/FileContentIndex
 /LINQ/UniversityManager/.vs/UniversityManager/FileContentIndex
 /LINQ/XMLinq/.vs/XMLinq/FileContentIndex
+/LINQ/LinqTOSql/.vs/LinqTOSql/FileContentIndex
