Push Project mini async

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /LINQ/UniversityManager/.vs/UniversityManager/FileContentIndex
 /LINQ/XMLinq/.vs/XMLinq/FileContentIndex
 /LINQ/LinqTOSql/.vs/LinqTOSql/FileContentIndex
+/LINQ/Fantasy_Character/.vs/Fantasy_Character/FileContentIndex
