--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /LINQ/XMLinq/.vs/XMLinq/FileContentIndex
 /LINQ/LinqTOSql/.vs/LinqTOSql/FileContentIndex
 /LINQ/Fantasy_Character/.vs/Fantasy_Character/FileContentIndex
+/EnumrableAndEnumerator/Advantages/.vs/Advantages/FileContentIndex
