--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /LINQ/LinqTOSql/.vs/LinqTOSql/FileContentIndex
 /LINQ/Fantasy_Character/.vs/Fantasy_Character/FileContentIndex
 /EnumrableAndEnumerator/Advantages/.vs/Advantages/FileContentIndex
+/LeetCode/LinkedListTwoNumReerseSum/.vs/LinkedListTwoNumReerseSum/FileContentIndex
