Length Of Longest Substring

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /LINQ/Fantasy_Character/.vs/Fantasy_Character/FileContentIndex
 /EnumrableAndEnumerator/Advantages/.vs/Advantages/FileContentIndex
 /LeetCode/LinkedListTwoNumReerseSum/.vs/LinkedListTwoNumReerseSum/FileContentIndex
+/LeetCode/LongestSubstringWithoutRepeating/.vs/LongestSubstringWithoutRepeating/FileContentIndex
