--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /EnumrableAndEnumerator/Advantages/.vs/Advantages/FileContentIndex
 /LeetCode/LinkedListTwoNumReerseSum/.vs/LinkedListTwoNumReerseSum/FileContentIndex
 /LeetCode/LongestSubstringWithoutRepeating/.vs/LongestSubstringWithoutRepeating/FileContentIndex
+/LeetCode/LongestPalindromicSubs/.vs/LongestPalindromicSubs/FileContentIndex
