--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /LeetCode/LinkedListTwoNumReerseSum/.vs/LinkedListTwoNumReerseSum/FileContentIndex
 /LeetCode/LongestSubstringWithoutRepeating/.vs/LongestSubstringWithoutRepeating/FileContentIndex
 /LeetCode/LongestPalindromicSubs/.vs/LongestPalindromicSubs/FileContentIndex
+/Patterns/SlidingWindow/SliddingSubbarayBeauty/.vs/SliddingSubbarayBeauty/FileContentIndex
