--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /LeetCode/LongestSubstringWithoutRepeating/.vs/LongestSubstringWithoutRepeating/FileContentIndex
 /LeetCode/LongestPalindromicSubs/.vs/LongestPalindromicSubs/FileContentIndex
 /Patterns/SlidingWindow/SliddingSubbarayBeauty/.vs/SliddingSubbarayBeauty/FileContentIndex
+/LeetCode/ZigZagConversation/.vs/ZigZagConversation/FileContentIndex
