--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /LeetCode/LongestPalindromicSubs/.vs/LongestPalindromicSubs/FileContentIndex
 /Patterns/SlidingWindow/SliddingSubbarayBeauty/.vs/SliddingSubbarayBeauty/FileContentIndex
 /LeetCode/ZigZagConversation/.vs/ZigZagConversation/FileContentIndex
+/Patterns/Backtracking/BackspaceStringCompare/.vs/BackspaceStringCompare/FileContentIndex
