--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /Patterns/SlidingWindow/SliddingSubbarayBeauty/.vs/SliddingSubbarayBeauty/FileContentIndex
 /LeetCode/ZigZagConversation/.vs/ZigZagConversation/FileContentIndex
 /Patterns/Backtracking/BackspaceStringCompare/.vs/BackspaceStringCompare/FileContentIndex
+/Patterns/TwoPointers/SquareOfSortedArr/.vs/SquareOfSortedArr/FileContentIndex
