--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /LeetCode/ZigZagConversation/.vs/ZigZagConversation/FileContentIndex
 /Patterns/Backtracking/BackspaceStringCompare/.vs/BackspaceStringCompare/FileContentIndex
 /Patterns/TwoPointers/SquareOfSortedArr/.vs/SquareOfSortedArr/FileContentIndex
+/LeetCode/NUniqIntSum/.vs/NUniqIntSum/FileContentIndex
