--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Patterns/Backtracking/BackspaceStringCompare/.vs/BackspaceStringCompare/FileContentIndex
 /Patterns/TwoPointers/SquareOfSortedArr/.vs/SquareOfSortedArr/FileContentIndex
 /LeetCode/NUniqIntSum/.vs/NUniqIntSum/FileContentIndex
+/Patterns/Hare&TortoiseAlgorithm/LinkedListCylce/.vs/LinkedListCylce/FileContentIndex
