--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Patterns/TwoPointers/SquareOfSortedArr/.vs/SquareOfSortedArr/FileContentIndex
 /LeetCode/NUniqIntSum/.vs/NUniqIntSum/FileContentIndex
 /Patterns/Hare&TortoiseAlgorithm/LinkedListCylce/.vs/LinkedListCylce/FileContentIndex
+/Patterns/MergeIntervals/MergeIntervals/.vs/MergeIntervals/FileContentIndex
