--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /LeetCode/NUniqIntSum/.vs/NUniqIntSum/FileContentIndex
 /Patterns/Hare&TortoiseAlgorithm/LinkedListCylce/.vs/LinkedListCylce/FileContentIndex
 /Patterns/MergeIntervals/MergeIntervals/.vs/MergeIntervals/FileContentIndex
+/Patterns/CyclicSort/FindAllMissingNumber/.vs/FindAllMissingNumber/FileContentIndex
