smallest positive number task done

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /Patterns/Hare&TortoiseAlgorithm/LinkedListCylce/.vs/LinkedListCylce/FileContentIndex
 /Patterns/MergeIntervals/MergeIntervals/.vs/MergeIntervals/FileContentIndex
 /Patterns/CyclicSort/FindAllMissingNumber/.vs/FindAllMissingNumber/FileContentIndex
+/Patterns/CyclicSort/FindSmallestMissingNumber/.vs/FindSmallestMissingNumber/FileContentIndex
