--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /DesignPatterns/Singleton/.vs/Singleton/FileContentIndex
 /DesignPatterns/Factory/.vs/Factory/FileContentIndex
 /Patterns/In-placeReversalOfLinkedList/ReverseLinkedList/.vs/ReverseLinkedList/FileContentIndex
+/DesignPatterns/AbstractFactory/.vs/AbstractFactory/FileContentIndex
