--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /DesignPatterns/Factory/.vs/Factory/FileContentIndex
 /Patterns/In-placeReversalOfLinkedList/ReverseLinkedList/.vs/ReverseLinkedList/FileContentIndex
 /DesignPatterns/AbstractFactory/.vs/AbstractFactory/FileContentIndex
+/DesignPatterns/Builder/.vs/Builder/FileContentIndex
