--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /Patterns/In-placeReversalOfLinkedList/ReverseLinkedList/.vs/ReverseLinkedList/FileContentIndex
 /DesignPatterns/AbstractFactory/.vs/AbstractFactory/FileContentIndex
 /DesignPatterns/Builder/.vs/Builder/FileContentIndex
+/DesignPatterns/Prototype/.vs/Prototype/FileContentIndex
