--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /DesignPatterns/AbstractFactory/.vs/AbstractFactory/FileContentIndex
 /DesignPatterns/Builder/.vs/Builder/FileContentIndex
 /DesignPatterns/Prototype/.vs/Prototype/FileContentIndex
+/Patterns/ThreeDFS/SameTree/.vs/SameTree/FileContentIndex
