Symmetric task done

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /DesignPatterns/Builder/.vs/Builder/FileContentIndex
 /DesignPatterns/Prototype/.vs/Prototype/FileContentIndex
 /Patterns/ThreeDFS/SameTree/.vs/SameTree/FileContentIndex
+/Patterns/ThreeDFS/Symmetric/.vs/Symmetric/FileContentIndex
