--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /DesignPatterns/Prototype/.vs/Prototype/FileContentIndex
 /Patterns/ThreeDFS/SameTree/.vs/SameTree/FileContentIndex
 /Patterns/ThreeDFS/Symmetric/.vs/Symmetric/FileContentIndex
+/DesignPatterns/Creational/AbstractFactory/.vs/AbstractFactory/FileContentIndex
+/DesignPatterns/Structural/Adapter/.vs/Adapter/FileContentIndex
