Bridge Pattern Done

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /Patterns/ThreeDFS/Symmetric/.vs/Symmetric/FileContentIndex
 /DesignPatterns/Creational/AbstractFactory/.vs/AbstractFactory/FileContentIndex
 /DesignPatterns/Structural/Adapter/.vs/Adapter/FileContentIndex
+/DesignPatterns/Structural/Bridge/.vs/Bridge/FileContentIndex
