--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /DesignPatterns/Creational/AbstractFactory/.vs/AbstractFactory/FileContentIndex
 /DesignPatterns/Structural/Adapter/.vs/Adapter/FileContentIndex
 /DesignPatterns/Structural/Bridge/.vs/Bridge/FileContentIndex
+/DesignPatterns/Structural/Decorator/.vs/Decorator/FileContentIndex
