--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /DesignPatterns/Structural/Adapter/.vs/Adapter/FileContentIndex
 /DesignPatterns/Structural/Bridge/.vs/Bridge/FileContentIndex
 /DesignPatterns/Structural/Decorator/.vs/Decorator/FileContentIndex
+/Patterns/ThreeBFS/SameTree/.vs/SameTree/FileContentIndex
