--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@
 /DesignPatterns/Structural/Bridge/.vs/Bridge/FileContentIndex
 /DesignPatterns/Structural/Decorator/.vs/Decorator/FileContentIndex
 /Patterns/ThreeBFS/SameTree/.vs/SameTree/FileContentIndex
+/Patterns/TreeDFS/BinaryThreePaths/.vs/BinaryThreePaths/FileContentIndex
