--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@
 /DesignPatterns/Structural/Decorator/.vs/Decorator/FileContentIndex
 /Patterns/ThreeBFS/SameTree/.vs/SameTree/FileContentIndex
 /Patterns/TreeDFS/BinaryThreePaths/.vs/BinaryThreePaths/FileContentIndex
+/Patterns/TreeDFS/InvertBinaryTree/.vs/InvertBinaryTree/FileContentIndex
