--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 /Patterns/ThreeBFS/SameTree/.vs/SameTree/FileContentIndex
 /Patterns/TreeDFS/BinaryThreePaths/.vs/BinaryThreePaths/FileContentIndex
 /Patterns/TreeDFS/InvertBinaryTree/.vs/InvertBinaryTree/FileContentIndex
+/Patterns/TreeDFS/BlanacedBinaryTree/.vs/BlanacedBinaryTree/FileContentIndex
