Composite task done

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@
 /Patterns/TreeDFS/BinaryThreePaths/.vs/BinaryThreePaths/FileContentIndex
 /Patterns/TreeDFS/InvertBinaryTree/.vs/InvertBinaryTree/FileContentIndex
 /Patterns/TreeDFS/BlanacedBinaryTree/.vs/BlanacedBinaryTree/FileContentIndex
+/DesignPatterns/Composite/.vs/Composite/FileContentIndex
