--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 /Patterns/TreeDFS/InvertBinaryTree/.vs/InvertBinaryTree/FileContentIndex
 /Patterns/TreeDFS/BlanacedBinaryTree/.vs/BlanacedBinaryTree/FileContentIndex
 /DesignPatterns/Composite/.vs/Composite/FileContentIndex
+/DesignPatterns/Facade/.vs/Facade/FileContentIndex
