--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 /Patterns/TreeDFS/BlanacedBinaryTree/.vs/BlanacedBinaryTree/FileContentIndex
 /DesignPatterns/Composite/.vs/Composite/FileContentIndex
 /DesignPatterns/Facade/.vs/Facade/FileContentIndex
+/Patterns/TwoHeaps/KthLargestElementInStream/.vs/KthLargestElementInStream/FileContentIndex
