--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@
 /DesignPatterns/Composite/.vs/Composite/FileContentIndex
 /DesignPatterns/Facade/.vs/Facade/FileContentIndex
 /Patterns/TwoHeaps/KthLargestElementInStream/.vs/KthLargestElementInStream/FileContentIndex
+/DesignPatterns/Proxy/.vs/Proxy/FileContentIndex
