--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /DesignPatterns/Facade/.vs/Facade/FileContentIndex
 /Patterns/TwoHeaps/KthLargestElementInStream/.vs/KthLargestElementInStream/FileContentIndex
 /DesignPatterns/Proxy/.vs/Proxy/FileContentIndex
+/DesignPatterns/Flyweight/.vs/Flyweight/FileContentIndex
