--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 /Patterns/TwoHeaps/KthLargestElementInStream/.vs/KthLargestElementInStream/FileContentIndex
 /DesignPatterns/Proxy/.vs/Proxy/FileContentIndex
 /DesignPatterns/Flyweight/.vs/Flyweight/FileContentIndex
+/Patterns/Subset/LetterCasePermutation/.vs/LetterCasePermutation/FileContentIndex
