Temp method pattern done

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /DesignPatterns/Proxy/.vs/Proxy/FileContentIndex
 /DesignPatterns/Flyweight/.vs/Flyweight/FileContentIndex
 /Patterns/Subset/LetterCasePermutation/.vs/LetterCasePermutation/FileContentIndex
+/DesignPatterns/Behavioral/TemplateMethod/.vs/TemplateMethod/FileContentIndex
