Strategy pattern done

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /DesignPatterns/Flyweight/.vs/Flyweight/FileContentIndex
 /Patterns/Subset/LetterCasePermutation/.vs/LetterCasePermutation/FileContentIndex
 /DesignPatterns/Behavioral/TemplateMethod/.vs/TemplateMethod/FileContentIndex
+/DesignPatterns/Behavioral/Strategy/.vs/Strategy/FileContentIndex
