--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@
 /Patterns/Subset/LetterCasePermutation/.vs/LetterCasePermutation/FileContentIndex
 /DesignPatterns/Behavioral/TemplateMethod/.vs/TemplateMethod/FileContentIndex
 /DesignPatterns/Behavioral/Strategy/.vs/Strategy/FileContentIndex
+/Patterns/BinarySearch/BinarySearchTask/.vs/BinarySearchTask/FileContentIndex
