--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@
 /DesignPatterns/Behavioral/TemplateMethod/.vs/TemplateMethod/FileContentIndex
 /DesignPatterns/Behavioral/Strategy/.vs/Strategy/FileContentIndex
 /Patterns/BinarySearch/BinarySearchTask/.vs/BinarySearchTask/FileContentIndex
+/DesignPatterns/Command/.vs/Command/FileContentIndex
+/DesignPatterns/Memento/.vs/Memento/FileContentIndex
