--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@
 /Patterns/BinarySearch/BinarySearchTask/.vs/BinarySearchTask/FileContentIndex
 /DesignPatterns/Command/.vs/Command/FileContentIndex
 /DesignPatterns/Memento/.vs/Memento/FileContentIndex
+/Patterns/TopKFrequentElement/.vs/TopKFrequentElement/FileContentIndex
