--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@
 /DesignPatterns/Command/.vs/Command/FileContentIndex
 /DesignPatterns/Memento/.vs/Memento/FileContentIndex
 /Patterns/TopKFrequentElement/.vs/TopKFrequentElement/FileContentIndex
+/DesignPatterns/Behavioral/ChainOfResponsibility/.vs/ChainOfResponsibility/FileContentIndex
+/DesignPatterns/Behavioral/Mediator/.vs/Mediator/FileContentIndex
