--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@
 /Patterns/TopKFrequentElement/.vs/TopKFrequentElement/FileContentIndex
 /DesignPatterns/Behavioral/ChainOfResponsibility/.vs/ChainOfResponsibility/FileContentIndex
 /DesignPatterns/Behavioral/Mediator/.vs/Mediator/FileContentIndex
+/Patterns/K-wayMerge/MegreKLists/.vs/MegreKLists/FileContentIndex
