--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@
 /DesignPatterns/Behavioral/ChainOfResponsibility/.vs/ChainOfResponsibility/FileContentIndex
 /DesignPatterns/Behavioral/Mediator/.vs/Mediator/FileContentIndex
 /Patterns/K-wayMerge/MegreKLists/.vs/MegreKLists/FileContentIndex
+/DesignPatterns/Behavioral/State/.vs/State/FileContentIndex
+/DesignPatterns/Behavioral/Observer/.vs/Observer/FileContentIndex
