Task was done by helping of GPT

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@
 /Patterns/K-wayMerge/MegreKLists/.vs/MegreKLists/FileContentIndex
 /DesignPatterns/Behavioral/State/.vs/State/FileContentIndex
 /DesignPatterns/Behavioral/Observer/.vs/Observer/FileContentIndex
+/Patterns/TopologicalSort/CourseSchedule/.vs/CourseSchedule/FileContentIndex
