--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@
 /DesignPatterns/Behavioral/State/.vs/State/FileContentIndex
 /DesignPatterns/Behavioral/Observer/.vs/Observer/FileContentIndex
 /Patterns/TopologicalSort/CourseSchedule/.vs/CourseSchedule/FileContentIndex
+/DesignPatterns/Behavioral/Interpreter/.vs/Interpreter/FileContentIndex
+/DesignPatterns/Behavioral/Iterator/.vs/Iterator/FileContentIndex
+/DesignPatterns/Behavioral/Visitor/.vs/Visitor/FileContentIndex
